Fix Bug #234250 - Do not use do_CreateInstance() to make gtk clip regions.  It is unnecessary and slow. r=caillon, sr=roc